# umrs-project

./: .gitignore  CLAUDE.md  CONTRIBUTORS.md  FILESYSTEM-LAYOUT.md  HACAMS.md  LICENSE-CREATIVE  LICENSE-DOCUMENTATION.md  Makefile  README.md  UMRS-PLAN.md  UMRS-PROJECT.md  antora-playbook-draft.yml  antora-playbook.yml  error.md  jamie.txt  navbar.txt  nohup.out  pqc-crypto-overview.md  pqc-crystals-kyber.md  prompts.  research-plan-access-control.md  research-plan-rust-security.md  rust_fix_quotes.txt  signing-manager.sh  umrs-levels-cui.txt  umrs-platform-branding.txt
components/rust-prototypes/: Cargo.toml  rustfmt.toml
components/rust-prototypes/cui-labels/data/: BASE-FULL-setrans.conf
components/rust-prototypes/cui-labels/src/: main.rs
components/rust-prototypes/kernel-files/: TPI.md
components/rust-prototypes/kernel-files/src/: lib.rs
components/rust-prototypes/mcs-setrans/: Cargo.toml  clippy.toml
components/rust-prototypes/mcs-setrans/src/: lib.rs
components/rust-prototypes/umrs-apparmor/: Cargo.toml
components/rust-prototypes/umrs-cui/data/: MLS-setrans.conf  TARGETED-setrans.conf
components/rust-prototypes/umrs-logspace/: final_notes.txt
components/rust-prototypes/umrs-logspace/src/: config.rs  config_loader.rs  main.rs  mock.rs
components/rust-prototypes/umrs-state/src/: auditd-info-probe.txt
components/rust-prototypes/vaultmgr/: Cargo.toml  cui-labels.json
components/rust-prototypes/vaultmgr/examples/: showfuncs.rs
components/rusty-gadgets/: .gitignore  CARGO_NOTES.md  Cargo.toml  Makefile  RUSTSEC-AUDIT.md  XTASK.md  clippy.toml  crates.io.md  deny.toml  great_lib.rs  jamie  lib.rs  myplan.md  rustfmt.toml
components/rusty-gadgets/console-tests/: !
components/rusty-gadgets/cui-labels/: Cargo.toml
components/rusty-gadgets/docs/: man-page-conventions.md  man-page-template.adoc
components/rusty-gadgets/kernel-files/: Cargo.toml
components/rusty-gadgets/kernel-files/src/: lib.rs  main.rs
components/rusty-gadgets/libs/umrs-core/: Cargo.toml  wizard_medium.txt  wizard_small.txt
components/rusty-gadgets/libs/umrs-hw/: Cargo.toml
components/rusty-gadgets/libs/umrs-platform/: Cargo.toml
components/rusty-gadgets/libs/umrs-selinux/: Cargo.toml  clippy.toml  jamie  notes  t  umrs-all.conf  umrs-stripped.conf
components/rusty-gadgets/libs/umrs-ui/: Cargo.toml  audit-card.md
components/rusty-gadgets/mcs-setrans/: Cargo.toml  good_lib.rs
components/rusty-gadgets/mcs-setrans/examples/: setrans_inspect.rs
components/rusty-gadgets/mcs-setrans/src/: lib.rs
components/rusty-gadgets/scripts/: umrs-install.sh
components/rusty-gadgets/scripts/umrs-shred/: umrs-shred.sh
components/rusty-gadgets/scripts/umrs-signing/: umrs-sign-mgr.sh
components/rusty-gadgets/selinux/: INSTRUCTIONS.md  Makefile  VAULT-USERS.md  rust-code.txt  umrs.fc  umrs.fc.in  umrs.if  umrs.pp  umrs.te
components/rusty-gadgets/selinux/archive/: cui_lei.te  umrs_cui.fc  umrs_cui.if  umrs_cui.te
components/rusty-gadgets/selinux/tmp/: umrs.tmp
components/rusty-gadgets/tpi-parser/: Cargo.toml
components/rusty-gadgets/tpi-parser/src/: lib.rs  main.rs
components/rusty-gadgets/umrs-c2pa/: Cargo.toml  THIRD-PARTY-NOTICES.md  bad-config.toml  my-test-config.toml  rustfmt.toml  umrs-c2pa.toml
components/rusty-gadgets/umrs-c2pa/config/: C2PA-TSA-TRUST-LIST.pem
components/rusty-gadgets/umrs-c2pa/docs/: C2PA_REPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  RUSTSEC-2023-0071.txt  TRUST-INVESTIGATION-2026-04-07.md  VERIFICATION_TEST.md  c2patool-research.md  fixes.txt  improvement-plan.md  notes.txt  trust-maintenance.md  umrs-c2pa.1
components/rusty-gadgets/umrs-c2pa/my-certs/: signing.key  signing.pem
components/rusty-gadgets/umrs-c2pa/src/: lib.rs  main.rs
components/rusty-gadgets/umrs-c2pa/tests/: c2pa_tests.rs
components/rusty-gadgets/umrs-core/: Cargo.toml  legacy.txt  unicode.txt  x
components/rusty-gadgets/umrs-core/examples/: ansi_basic.rs  console2.rs  custom_opts_metricfmt.rs  i18n.rs
components/rusty-gadgets/umrs-core/selinux/: README.md
components/rusty-gadgets/umrs-core/src/: .info  i18n.md  i18n.rs  lib.rs  metricfmt.rs  validate.rs
components/rusty-gadgets/umrs-core/tests/: README.md  ansi.rs  test_metricfmt.rs
components/rusty-gadgets/umrs-crypto/: Cargo.toml
components/rusty-gadgets/umrs-cui/: Cargo.toml
components/rusty-gadgets/umrs-cui/data/: TARGETED-setrans.conf
components/rusty-gadgets/umrs-hw/examples/: read_timestamp.rs
components/rusty-gadgets/umrs-hw/src/: hw_timestamp.rs  lib.rs
components/rusty-gadgets/umrs-hw/tests/: hw_timestamp_tests.rs
components/rusty-gadgets/umrs-label/: Cargo.toml  reformat.txt  xy
components/rusty-gadgets/umrs-label/config/: CANADIAN-PROTECTED.json  LEVELS.json  MLS-setrans.conf.template  TARGETED-setrans.conf  US-CUI-PALETTE.json  generate_setrans.py
components/rusty-gadgets/umrs-label/docs/: FIELD-REFERENCE.md  systemlow-explained.txt  umrs-label.1
components/rusty-gadgets/umrs-label/examples/: label_registry.rs  labels.rs
components/rusty-gadgets/umrs-labels/: Cargo.toml  cui-labels.json
components/rusty-gadgets/umrs-logspace/: Cargo.toml  logspace.toml  notes.txt
components/rusty-gadgets/umrs-ls/: Cargo.toml  check_luks.txt  j  jla  notes.txt  showdow-test.txt  x
components/rusty-gadgets/umrs-platform/: Cargo.toml
components/rusty-gadgets/umrs-selinux/: Cargo.toml  UMRS.cil  clippy.toml  flownotes.txt  jamie  log_create.md  nasty  puncuation.txt  umrs.cil  umrs_cui.cil
components/rusty-gadgets/umrs-semanage/: Cargo.toml
components/rusty-gadgets/umrs-sepolicy/: Cargo.toml
components/rusty-gadgets/umrs-stat/: Cargo.toml
components/rusty-gadgets/umrs-state/: Cargo.toml  ~
components/rusty-gadgets/umrs-tester/: Cargo.toml
components/rusty-gadgets/umrs-tui/: Cargo.toml  audit-card.md  how-to.md
components/rusty-gadgets/umrs-ui/: how-to.md
components/rusty-gadgets/umrs-uname/: Cargo.toml  run-as-french.sh
components/rusty-gadgets/vaultmgr/: Cargo.toml  cui-labels.json
components/rusty-gadgets/xtask/: Cargo.toml
(+2259 files in other folders)
