[workspace]
resolver = "2"
members = [
    "libs/umrs-core", 
    "libs/umrs-hw",
    "libs/umrs-platform", 
    "libs/umrs-selinux",
    "libs/umrs-ui", 
    "umrs-label",
    "umrs-c2pa",
    "umrs-ls", 
    "umrs-stat", 
    "umrs-uname",
    "xtask",
]

# NIST SP 800-53 SA-15: Development Process, Standards, and Tools.
# ANSSI Rust Secure Coding Guide: integer arithmetic in release builds MUST use
# checked/saturating/wrapping operations, or overflow-checks must be enabled.
# Rust disables overflow checks in release builds by default; this restores the
# same defensive behavior that debug builds provide across all workspace members.
[profile.release]
overflow-checks = true

# Workspace-wide clippy lints. Member crates opt in with `[lints] workspace = true`.
# The `disallowed_methods` list itself lives in `clippy.toml` alongside this file.
#
# Phase A: `warn` so the workspace builds cleanly while existing call sites are
# triaged. Phase B flips this to `deny` once each offending call has been either
# refactored to the UMRS equivalent or annotated with
#   #[allow(clippy::disallowed_methods, reason = "...")]
# The `reason = "..."` clause requires clippy 1.81+.
[workspace.lints.clippy]
disallowed_methods = "warn"
