[package]
name = "umrs-label"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "umrs_labels"
path = "src/lib.rs"

[[bin]]
name = "umrs-label"
path = "src/main.rs"

[dependencies]
umrs-core = { path = "../libs/umrs-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
log = "0.4"
