[package]
name = "umrs-label"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "umrs_labels"
path = "src/lib.rs"

[[bin]]
name = "umrs-label"
path = "src/main.rs"

[dependencies]
umrs-core     = { path = "../libs/umrs-core" }
umrs-ui       = { path = "../libs/umrs-ui" }
umrs-selinux  = { path = "../libs/umrs-selinux" }
umrs-platform = { path = "../libs/umrs-platform" }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
anyhow        = "1.0"
clap          = { version = "4.5", features = ["derive"] }
regex         = "1"
log           = "0.4"
env_logger    = "0.11"
ratatui       = "0.30.0"
crossterm     = "0.28"
chrono        = "0.4"
nix           = { version = "0.27", features = ["user", "fs"] }

[lints.clippy]
missing_errors_doc    = { level = "allow", priority = 1 }
missing_panics_doc    = { level = "allow", priority = 1 }
doc_markdown          = { level = "allow", priority = 1 }
map_unwrap_or         = { level = "allow", priority = 1 }
option_if_let_else    = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
