[package]
name = "umrs-label"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "umrs_labels"
path = "src/lib.rs"

[[bin]]
name = "umrs-label"
path = "src/main.rs"

[dependencies]
umrs-core     = { path = "../libs/umrs-core" }
umrs-ui       = { path = "../libs/umrs-ui" }
umrs-selinux  = { path = "../libs/umrs-selinux" }
umrs-platform = { path = "../libs/umrs-platform" }
clap          = { version = "4", features = ["derive"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
regex         = "1"          # CUI banner syntax validation (validate.rs) — patterns too complex for str methods
log           = "0.4"
systemd-journal-logger = "2"
ratatui       = "0.30.0"
crossterm     = "0.28"
nix           = { version = "0.27", features = ["user", "fs"] }

[lints.clippy]
missing_errors_doc    = { level = "allow", priority = 1 }
missing_panics_doc    = { level = "allow", priority = 1 }
doc_markdown          = { level = "allow", priority = 1 }
map_unwrap_or         = { level = "allow", priority = 1 }
option_if_let_else    = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
