[package]
name = "umrs-labels"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "umrs-labels"
path = "src/main.rs"

[dependencies]
umrs-core = { path = "../umrs-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
log = "0.4"
