[package]
name = "umrs-ls"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "umrs_ls"
path = "src/lib.rs"

[[bin]]
name = "umrs-ls"
path = "src/main.rs"

[dependencies]
umrs-selinux  = { path = "../libs/umrs-selinux" }
umrs-core     = { path = "../libs/umrs-core" }
umrs-ui       = { path = "../libs/umrs-ui" }
umrs-platform = { path = "../libs/umrs-platform" }
umrs-label    = { path = "../umrs-label" }
umrs-stat     = { path = "../umrs-stat" }

chrono       = "0.4"
clap         = { version = "4", features = ["derive"] }
tree_magic_mini = "3"
nix          = { version = "0.27", features = ["user", "fs"] }
log          = { version = "0.4", features = ["release_max_level_info"] }
systemd-journal-logger = "2"
gettext-rs   = { version = "0.7", features = ["gettext-system"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
ratatui      = "0.30.0"
crossterm    = "0.28"

[lints.clippy]
missing_errors_doc    = { level = "allow", priority = 1 }
missing_panics_doc    = { level = "allow", priority = 1 }

# doc_markdown: backtick-wrapping every field name in 
# prose is disruptive (matches umrs-selinux policy)
doc_markdown          = { level = "allow", priority = 1 }

# map_unwrap_or / option_if_let_else: explicit chains 
# and if/else preferred for readability
map_unwrap_or         = { level = "allow", priority = 1 }
option_if_let_else    = { level = "allow", priority = 1 }

# format_push_string: write! over push_str(&format!()) 
# is a micro-optimisation; readability wins
format_push_string    = { level = "allow", priority = 1 }
