[package]
name = "umrs-platform"
version = "0.1.0"
edition = "2024"

[features]
default = ["rpm-db"]
# rpm-db: enables SQLite-backed RPM database queries via rusqlite.
# When disabled, RpmProbe falls back to stub behaviour (presence checks only).
# By default, links against the system's libsqlite3 — covered by RHEL's CVE
# response pipeline and compiled with distro hardening flags.
rpm-db = ["dep:rusqlite"]
# rpm-db-bundled: compiles SQLite from source into the binary. Use for CI,
# cross-builds, or environments without sqlite-devel. Not covered by
# system security patching — use system SQLite for production deployments.
rpm-db-bundled = ["rpm-db", "rusqlite/bundled"]

[dependencies]
nom      = "7.1"
nix      = { version = "0.27", features = ["fs"] }
log      = { version = "0.4",  features = ["release_max_level_info"] }

# rustix 0.38 — safe syscall wrappers (no libc, no unsafe surface for callers).
# Provides: getpid(), statx, readlinkat, openat2 + ResolveFlags.
# Same version already present in umrs-selinux — consistent across workspace.
# Supply chain: actively maintained, zero-unsafe API, minimal transitive deps.
# NIST SP 800-53 SI-7: fd-anchored I/O eliminates TOCTOU races.
rustix    = { version = "0.38", features = ["fs", "process", "system"] }

# sha2 0.10 — RustCrypto SHA-256 implementation (pure Rust, no unsafe).
# Used exclusively for integrity verification in integrity_check.rs:
# computes on-disk digest and compares against package DB reference value.
# NOT used for key derivation, MAC generation, or authentication tokens.
# Supply chain: RustCrypto family, well-audited, minimal transitive deps
# (digest, block-buffer, crypto-common).
sha2      = { version = "0.10", default-features = false }

# thiserror 1 — typed error derive macro (proc-macro only, no unsafe at runtime).
# Used for DetectionError and OsReleaseParseError.
# Supply chain: transitive chain is proc-macro2/syn/quote — standard Rust derive
# macro infrastructure, widely audited.
thiserror = "1"
env_logger = "0.11.9"

# hmac 0.12 — RustCrypto HMAC construction (HMAC-SHA-256 seal for SEC pattern).
# Used exclusively in sealed_cache.rs to compute and verify HMAC-SHA-256 tags
# over cached DetectionResult payloads. Provides constant-time verify_slice()
# which prevents timing-based tag oracle attacks.
# Supply chain: RustCrypto family — same audit lineage as sha2. Transitive deps:
# digest, crypto-common. No unsafe surface exposed to callers.
# Note: On FIPS systems, the sealed cache is disabled (FIPS gate in SealedCache::new).
# HMAC-SHA-256 via this crate is not FIPS 140-3 validated; caching is
# unconditionally disabled when /proc/sys/kernel/fips_enabled = 1.
# NIST SP 800-53 SC-28, SC-12 — integrity protection and key management.
hmac = "0.12"

# zeroize 1 — memory zeroing for ephemeral key material (SEC pattern).
# Used exclusively in sealed_cache.rs for the SealingKey type, which holds
# the ephemeral HMAC-SHA-256 sealing key. ZeroizeOnDrop ensures key bytes
# are overwritten when SealedCache is dropped.
# Supply chain: single-purpose crate, minimal dependencies, no unsafe surface
# exposed to callers. Derive feature required for ZeroizeOnDrop proc-macro.
# NIST SP 800-53 SC-12 — ephemeral key material must be cleared after use.
zeroize = { version = "1", features = ["derive"] }

# rusqlite 0.31 — safe Rust bindings to SQLite (optional, feature-gated).
# Used exclusively to read /var/lib/rpm/rpmdb.sqlite in read-only mode.
# Default: links against system libsqlite3 (RHEL-patched, hardened, FIPS-aware).
# Use `rpm-db-bundled` feature to compile SQLite from source for CI/cross-builds.
# Supply chain: well-maintained, widely used in the Rust ecosystem, minimal
# transitive deps beyond libsqlite3-sys. No unsafe surface exposed to callers.
# NIST SP 800-53 CM-8, SA-12: component inventory / supply-chain provenance.
#
# FFI EXCEPTION — documented architectural decision
# -----------------------------------------------------------------------
# rusqlite uses FFI (via libsqlite3-sys) to bind to the C libsqlite3 library.
# This is a deliberate, accepted exception to the project's "prefer pure Rust"
# policy (CLAUDE.md). The exception is justified on the following grounds:
#
#   1. RHEL 10's RPM database (rpmdb.sqlite) uses the SQLite wire format.
#      No production-grade pure-Rust SQLite implementation can reliably read
#      it with full correctness guarantees.
#   2. On RHEL 10, libsqlite3 is compiled with distro hardening flags
#      (-fstack-protector-strong, -D_FORTIFY_SOURCE=2) and is covered by
#      Red Hat's CVE response pipeline — the system library is a managed,
#      patched dependency.
#   3. The unsafe code is fully encapsulated within rusqlite / libsqlite3-sys.
#      No unsafe surface is exposed to callers in this crate.
#      #![forbid(unsafe_code)] remains enforced at the Rust source level.
#   4. The connection is opened read-only (SQLITE_OPEN_READ_ONLY) and all
#      queries use parameterized placeholders — the FFI surface is minimised.
#
# Reviewed and accepted by: Jamie Adams, 2026-03-11
# NIST SP 800-53 SA-12: supply chain risk explicitly evaluated and accepted.
rusqlite = { version = "0.31", optional = true }

[lints.clippy]
unreadable_literal  = { level = "allow", priority = 1 }
missing_errors_doc  = { level = "allow", priority = 1 }
