[package]
name = "umrs-selinux"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "7.1"
chrono = "0.4"
env_logger = "0.11"
rustix = { version = "0.38", features = ["fs", "std"] }
nix    = { version = "0.27", features = ["user", "fs" ] }
log    = { version = "0.4",  features = ["release_max_level_info"] }


[lints.clippy]
unreadable_literal = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
