[package]
name = "umrs-stat"
version = "0.1.0"
edition = "2024"
description = "UMRS file security audit card — interactive stat-style display of SELinux labels and inode security flags"

[[bin]]
name = "umrs-stat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.28"
rustix = { version = "1", features = ["system"] }
umrs-core = { path = "../umrs-core" }
umrs-selinux = { path = "../umrs-selinux" }
umrs-platform = { path = "../umrs-platform" }
umrs-ui = { path = "../umrs-ui" }
tree_magic_mini = "3"
log = "0.4"
systemd-journal-logger = "2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
option_if_let_else = "allow"
redundant_closure = "allow"
unreadable_literal = "allow"
