[package]
name = "umrs-stat"
license = "MIT"
version = "0.1.0"
edition = "2024"
description = """
UMRS file security audit card — interactive stat-style display of 
SELinux labels and inode security flags
"""
# Note: crates.io has a maximum of 5 categories. 
# Each category should match one of the strings 
# available at https://crates.io/category_slugs, and must match exactly.

# https://doc.rust-lang.org/cargo/reference/manifest.html
# include/exclude
# documentation = "https:// " when we finish
# include = ["/src", "/examples"]
# keywords


[lib]
name = "umrs_stat"
path = "src/lib.rs"

[[bin]]
name = "umrs-stat"
path = "src/main.rs"


[dependencies]
umrs-core = { path = "../libs/umrs-core" }
umrs-selinux = { path = "../libs/umrs-selinux" }
umrs-platform = { path = "../libs/umrs-platform" }
umrs-ui = { path = "../libs/umrs-ui" }

clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.28"
rustix = { version = "1", features = ["system"] }
tree_magic_mini = "3"
log = "0.4"
systemd-journal-logger = "2"

# sha2 0.10 — RustCrypto SHA-2 family (pure Rust, no unsafe).
# Used exclusively for display-only digest rows in the Identity tab
# (SHA-256 and SHA-384 side-by-side; single pass over the file).
# NOT used for trust decisions, key derivation, or MAC generation.
# Supply chain: RustCrypto family — same audit lineage as sha2 in umrs-platform.
# Transitive deps: digest, block-buffer, crypto-common.
# FIPS 180-4: SHA-256 and SHA-384 are approved hash algorithms.
# NIST SP 800-53 SI-7: digest rows provide tamper-evidence display.
sha2 = { version = "0.10", default-features = false }


[lints.rust]
unsafe_code = "forbid"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
option_if_let_else = "allow"
redundant_closure = "allow"
unreadable_literal = "allow"
