[package]
name = "umrs-stat"
license = "MIT"
version = "0.1.0"
edition = "2024"
description = """
UMRS file security audit card — interactive stat-style display of 
SELinux labels and inode security flags
"""
# Note: crates.io has a maximum of 5 categories. 
# Each category should match one of the strings 
# available at https://crates.io/category_slugs, and must match exactly.

# https://doc.rust-lang.org/cargo/reference/manifest.html
# include/exclude
# documentation = "https:// " when we finish
# include = ["/src", "/examples"]
# keywords


[lib]
name = "umrs_stat"
path = "src/lib.rs"

[[bin]]
name = "umrs-stat"
path = "src/main.rs"


[dependencies]
umrs-core = { path = "../libs/umrs-core" }
umrs-selinux = { path = "../libs/umrs-selinux" }
umrs-platform = { path = "../libs/umrs-platform" }
umrs-ui = { path = "../libs/umrs-ui" }

clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.28"
rustix = { version = "1", features = ["system"] }
tree_magic_mini = "3"
log = "0.4"
systemd-journal-logger = "2"


[lints.rust]
unsafe_code = "forbid"


[lints.clippy]
# UMRS workspace guardrail — see components/rusty-gadgets/clippy.toml.
disallowed_methods = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
option_if_let_else = "allow"
redundant_closure = "allow"
unreadable_literal = "allow"
