[package]
name = "umrs-uname"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = """
UMRS OS detection audit card — interactive display of platform 
identity, kernel security posture, and label trust.
"""

[[bin]]
name = "umrs-uname"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.30.0"
umrs-core = { path = "../libs/umrs-core" }
umrs-platform = { path = "../libs/umrs-platform" }
umrs-ui = { path = "../libs/umrs-ui" }
log = "0.4"
systemd-journal-logger = "2"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
option_if_let_else = "allow"
redundant_closure = "allow"
unreadable_literal = "allow"
