[package]
name = "umrs-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["release_max_level_info"] }
owo-colors = "4"
gettext-rs = "0.7.7"
humansize = "2.1.3"
textwrap = "0.16"
regex = "1.12.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_bench"
harness = false
