[package]
name = "umrs-hw"
version = "0.1.0"
edition = "2024"
license = "MIT"

# ─────────────────────────────────────────────────────────────────────────────
# UNSAFE ISOLATION BOUNDARY
# ─────────────────────────────────────────────────────────────────────────────
# This is the ONLY crate in the workspace that does not carry
# #![forbid(unsafe_code)]. Its sole purpose is to isolate the single `unsafe`
# block required for the RDTSCP inline assembly instruction on x86_64, which
# has no safe core::arch intrinsic equivalent (confirmed in intrinsics-map.md).
#
# All unsafe code lives in src/hw_timestamp.rs. The public API exported by
# src/lib.rs is entirely safe — callers do not interact with any unsafe surface.
#
# Architecture: NIST SP 800-218 SSDF PW.4 — the rest of the workspace
# maintains a compile-time provable safe-code guarantee via #![forbid].
# Isolating the one necessary exception in a dedicated crate makes the unsafe
# surface auditable, minimal, and greppable (rg 'unsafe' umrs-hw/src/).
#
# Reviewed and accepted by: Jamie Adams, 2026-03-16
# ─────────────────────────────────────────────────────────────────────────────

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }

# rustix — CLOCK_MONOTONIC_RAW fallback for non-x86_64 targets (aarch64, etc.).
# On x86_64, rustix is still compiled but the RDTSCP path is taken instead.
# Migrated from 0.38 → 1.x to align with workspace (C-4 remediation).
# clock_gettime + ClockId are present in 1.x under rustix::time (same API).
# NIST SP 800-53 AU-8 — high-resolution monotonic timing for audit records.
rustix = { version = "1", features = ["time"] }

[lints.clippy]
# UMRS workspace guardrail — see components/rusty-gadgets/clippy.toml.
# Duplicated here (not `workspace = true`) because this crate has per-crate
# overrides that Cargo forbids combining with workspace inheritance.
disallowed_methods = "warn"
unreadable_literal = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
