[package]
name = "umrs-platform"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["rpm-db"]
# rpm-db: enables SQLite-backed RPM database queries via rusqlite.
# When disabled, RpmProbe falls back to stub behaviour (presence checks only).
# By default, links against the system's libsqlite3 — covered by RHEL's CVE
# response pipeline and compiled with distro hardening flags.
rpm-db = ["dep:rusqlite"]
# rpm-db-bundled: compiles SQLite from source into the binary. Use for CI,
# cross-builds, or environments without sqlite-devel. Not covered by
# system security patching — use system SQLite for production deployments.
rpm-db-bundled = ["rpm-db", "rusqlite/bundled"]

[dependencies]
# umrs-core — workspace i18n utilities, provides i18n::tr() for operator-facing
# display strings. Adding this dependency brings in gettext-rs (C FFI via libintl),
# colored, serde, serde_json, regex, textwrap, and humansize. This is a deliberate
# architectural trade-off: display.rs is the canonical source of operator-visible
# annotation strings and must translate them at their origin so every consumer
# (TUI, CLI, JSON, assessment reports) receives localized output without each
# implementing its own i18n wrapping.
#
# FFI NOTE: gettext-rs links against the system libintl (or a bundled gettext).
# This is a display-layer dependency, not a security-critical code path. The
# translation lookup is pure I/O — no security decisions depend on its output.
# Reviewed and accepted per task: i18n wrap of display.rs annotation strings.
# NIST SP 800-53 SA-5: centralised, localizable operator-facing output.
umrs-core = { path = "../umrs-core" }

# umrs-hw — hardware timestamp isolation crate (the workspace's unsafe boundary).
# Provides safe read_hw_timestamp() backed by RDTSCP on x86_64 or
# CLOCK_MONOTONIC_RAW on aarch64. The only workspace crate permitted to contain
# unsafe code; all unsafe is encapsulated behind a safe public API.
# NIST SP 800-53 AU-8 — high-resolution timing for phase duration audit records.
# Reviewed and accepted by: Jamie Adams, 2026-03-16
umrs-hw  = { path = "../umrs-hw" }

nom      = "7.1"
nix      = { version = "0.27", features = ["fs"] }
log      = { version = "0.4",  features = ["release_max_level_info"] }

# rustix 1.x — safe syscall wrappers (no libc, no unsafe surface for callers).
# Provides: getpid(), statx, readlinkat, fstat, fgetxattr, clock_gettime, uname.
# Migrated from 0.38 → 1.x to align with umrs-ui and umrs-stat; eliminates the
# dual-version split that caused two copies of rustix to be compiled into the
# workspace binary (C-4 remediation, Knox security review 2026-04-09).
# Supply chain: actively maintained, zero-unsafe API, minimal transitive deps.
# All 0.38 APIs used by this crate (statx, readlinkat, CWD, AtFlags, StatxFlags,
# fstat, major, minor, getpid, clock_gettime) are present in 1.x under the same
# module paths and type signatures. Verified against rustix 1.1.4 source.
# NIST SP 800-53 SI-7: fd-anchored I/O eliminates TOCTOU races.
rustix    = { version = "1", features = ["fs", "process", "system", "time"] }

# sha2 0.10 — RustCrypto SHA-256 implementation (pure Rust, no unsafe).
# Used exclusively for integrity verification in integrity_check.rs:
# computes on-disk digest and compares against package DB reference value.
# NOT used for key derivation, MAC generation, or authentication tokens.
# Supply chain: RustCrypto family, well-audited, minimal transitive deps
# (digest, block-buffer, crypto-common).
sha2      = { version = "0.10", default-features = false }

# thiserror 1 — typed error derive macro (proc-macro only, no unsafe at runtime).
# Used for DetectionError and OsReleaseParseError.
# Supply chain: transitive chain is proc-macro2/syn/quote — standard Rust derive
# macro infrastructure, widely audited.
thiserror = "1"
env_logger = "0.11.9"

# hmac 0.12 — RustCrypto HMAC construction (HMAC-SHA-256 seal for SEC pattern).
# Used exclusively in sealed_cache.rs to compute and verify HMAC-SHA-256 tags
# over cached DetectionResult payloads. Provides constant-time verify_slice()
# which prevents timing-based tag oracle attacks.
# Supply chain: RustCrypto family — same audit lineage as sha2. Transitive deps:
# digest, crypto-common. No unsafe surface exposed to callers.
# Note: On FIPS systems, the sealed cache is disabled (FIPS gate in SealedCache::new).
# HMAC-SHA-256 via this crate is not FIPS 140-3 validated; caching is
# unconditionally disabled when /proc/sys/crypto/fips_enabled = 1.
# NIST SP 800-53 SC-28, SC-12 — integrity protection and key management.
hmac = "0.12"

# zeroize 1 — memory zeroing for ephemeral key material (SEC pattern).
# Used exclusively in sealed_cache.rs for the SealingKey type, which holds
# the ephemeral HMAC-SHA-256 sealing key. ZeroizeOnDrop ensures key bytes
# are overwritten when SealedCache is dropped.
# Supply chain: single-purpose crate, minimal dependencies, no unsafe surface
# exposed to callers. Derive feature required for ZeroizeOnDrop proc-macro.
# NIST SP 800-53 SC-12 — ephemeral key material must be cleared after use.
zeroize = { version = "1", features = ["derive"] }

# rusqlite 0.31 — safe Rust bindings to SQLite (optional, feature-gated).
# Used exclusively to read /var/lib/rpm/rpmdb.sqlite in read-only mode.
# Default: links against system libsqlite3 (RHEL-patched, hardened, FIPS-aware).
# Use `rpm-db-bundled` feature to compile SQLite from source for CI/cross-builds.
# Supply chain: well-maintained, widely used in the Rust ecosystem, minimal
# transitive deps beyond libsqlite3-sys. No unsafe surface exposed to callers.
# NIST SP 800-53 CM-8, SA-12: component inventory / supply-chain provenance.
#
# FFI EXCEPTION — documented architectural decision
# -----------------------------------------------------------------------
# rusqlite uses FFI (via libsqlite3-sys) to bind to the C libsqlite3 library.
# This is a deliberate, accepted exception to the project's "prefer pure Rust"
# policy (CLAUDE.md). The exception is justified on the following grounds:
#
#   1. RHEL 10's RPM database (rpmdb.sqlite) uses the SQLite wire format.
#      No production-grade pure-Rust SQLite implementation can reliably read
#      it with full correctness guarantees.
#   2. On RHEL 10, libsqlite3 is compiled with distro hardening flags
#      (-fstack-protector-strong, -D_FORTIFY_SOURCE=2) and is covered by
#      Red Hat's CVE response pipeline — the system library is a managed,
#      patched dependency.
#   3. The unsafe code is fully encapsulated within rusqlite / libsqlite3-sys.
#      No unsafe surface is exposed to callers in this crate.
#      #![forbid(unsafe_code)] remains enforced at the Rust source level.
#   4. The connection is opened read-only (SQLITE_OPEN_READ_ONLY) and all
#      queries use parameterized placeholders — the FFI surface is minimised.
#
# Reviewed and accepted by: Jamie Adams, 2026-03-11
# NIST SP 800-53 SA-12: supply chain risk explicitly evaluated and accepted.
rusqlite = { version = "0.31", optional = true }

[dev-dependencies]
# tempfile — creates temporary files for white-box posture parser tests.
# Used in posture_tests.rs to test sysctl.d file parsing (slash-key normalisation)
# without touching system sysctl.d directories.
# Supply chain: single-purpose crate, minimal transitive deps, no unsafe surface.
tempfile = "3"

# criterion 0.5 — statistics-driven micro-benchmarking harness.
# Used exclusively in benches/platform_bench.rs to establish a performance baseline
# for the OsDetector::detect() pipeline and per-phase durations.
# html_reports feature enables Criterion's built-in HTML output for visual regression
# tracking. Dev-only; never linked into production binaries.
# Supply chain: mature, widely-used benchmark harness; no unsafe surface for callers.
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "platform_bench"
harness = false

[lints.clippy]
# UMRS workspace guardrail — see components/rusty-gadgets/clippy.toml.
disallowed_methods  = "warn"
unreadable_literal  = { level = "allow", priority = 1 }
missing_errors_doc  = { level = "allow", priority = 1 }
