[package]
name = "umrs-selinux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
umrs-platform = { path = "../umrs-platform" }
nom = "7.1"
regex = "1"
chrono = "0.4"
bitflags = "2.11.0"
env_logger = "0.11"
# rustix 1.x — migrated from 0.38 to align with workspace (C-4 remediation).
# APIs used: fgetxattr (xattrs.rs), IFlags + ioctl_getflags (secure_dirent.rs).
# Both are present in 1.x under the same rustix::fs module paths.
rustix = { version = "1", features = ["fs", "std"] }
nix    = { version = "0.27", features = ["user", "fs" ] }
log    = { version = "0.4",  features = ["release_max_level_info"] }
systemd-journal-logger = "2.2.2"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "selinux_bench"
harness = false

[lints.clippy]
# UMRS workspace guardrail — see components/rusty-gadgets/clippy.toml.
disallowed_methods = "warn"
unreadable_literal = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
